force-app/main/default/objects/custom_create161__c/custom_create161__c.object-meta.xml
<CustomObject>
    <label>Custom created object161</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects161</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>