force-app/main/default/objects/custom_create161__c/fields/custom_create_161field531__c.field-meta.xml
<CustomField>
    <fullName>custom_create_161field531__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 161field531</label>
    <type>Checkbox</type>
</CustomField>