force-app/main/default/objects/custom_create161__c/fields/custom_create_161field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_161field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 161field545</label>
    <type>Checkbox</type>
</CustomField>